# hacka.re

./: .env.example  .gitattributes  .gitignore  AGENT_ORCHESTRATION.md  CLAUDE.md  CNAME  COMPLETE_DOCUMENTATION.md  CRYPTO_SPEC.md  DEFAULT_FUNCTIONS_README.md  FINAL_SHARED_LINK_FIX.md  FUNCTIONS_MODAL_STYLE.md  FUNCTION_CALLING_FIX_SUMMARY.md  LICENSE  LLM Security Literacy.md  MCP-README.md  MCP_CLIENT_README.md  MCP_INTEGRATION.md  MCP_OAUTH_2_1_COMPLIANCE.md  MCP_OAUTH_IMPLEMENTATION.md  MCP_OAUTH_TEST_COVERAGE_SUMMARY.md  MULTI_AGENT_DEMO.md  NAMESPACE_GUIDE.md  PROMPTS_PERFORMANCE_OPTIMIZATION.md  README.md  RELEASE_NOTES.md  SERVICE_CONNECTOR_INTEGRATION.md  SHARED_LINK_FIX_SUMMARY.md  SITEMAP.md  STREAMING_FIX_DOCUMENTATION.md  TEST_SUMMARY.md  _config.yml  add-api-spec-tool.js  add-sample-tool.js  build-huggingface.js  check_environments.sh  clean_environments.sh  clear_model_conflict.html  core_tests.out  core_tests_direct.out  cors-friendly-apis.js  (+119 more)
_tests/: README.md  STOP_GENERATION_SUMMARY.md  azure-openai-debug.html  azure-openai-fix.md  azure-openai-test.html  check_github_registration.html  context-window-update-test.html  conversation_continuity_test.html  crypto-utils.test.js  custom-gpt-tooltip-test.html  debug-mode-test.html  debug-test-runner.html  default-functions-debug-test.html  default-functions-test.html  detailed-error-handling-test.html  deterministic-crypto-demo.html  fallback-namespace-warning-test.html  run-tests.js  (+42 more)
hackare/: .env.example  ARCHITECTURE.md  README.md  __init__.py  cli.py  core.py  pyproject.toml  rag.py  requirements.txt  setup.py  setup_environment.sh  templates.py
hackare/hackare.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
hackare/tests/: test_cli.py  test_core.py
(+1573 files in other folders)
